--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -1,15 +1,158 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Righteous", sans-serif;
+    outline: none;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    background-color: #d7dbde;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+    font-size: 62.5%;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+main {
+    display: flex;
+    background-color: #9daec1;
+    width: 500px;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.register {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    padding: 10px;
+    display: flex;
+    gap: 10px;
+    height: 70px;
+}
+
+input {
+    padding: 10px;
+    font-size: 1.8em;
+    border: none;
+    border-radius: 3px;
+}
+
+.btn-add {
+    width: 50px;
+    cursor: pointer;
+}
+
+.btn-add img {
+    width: 100%;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+.btn-add:hover {
+    width: 51px;
+}
+
+.response {
+    width: 100%;
+    height: 400px;
+}
+
+.task-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    height: 100%;
+    gap: 5px;
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.task-container::-webkit-scrollbar {
+    display: none;
+}
+
+.task-content {
+    border: 1px solid #9b9fa3;
+    font-size: 2em;
+    background-color: #c7cdd3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.alter {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.task {
+    width: calc(100% - 20px);
+    height: 100%;
+}
+
 .card {
     position: absolute;
-    background-color: red;
+    background-color: #9daec1;
+    border: 1px solid #737c86;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
     height: 100px;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.show{
+
+.btn-close {
+    width: 25px;
+    height: 25px;
+    background-color: red;
+    border: none;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.5em;
+}
+
+.btn-edit,
+.btn-delete {
+    padding: 10px;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.show {
     display: flex;
+}
+.hide{
+    display: none;
+}
+.done{
+    background-color: rgb(66, 191, 8);
+    color: white;
 }
